# futures

./: .gitignore  CMakeLists.txt  accelerate_bls377.cpp  activation_benchmark.typ  advanced_opt_results.json  advanced_report.tex  advanced_zkp_optimizer.py  advanced_zkp_report.typ  aleo_comms_test.py  aleo_discovery_report.typ  aleo_profitability.typ  aleo_profitability.v  aleo_prover_verification.v  aleo_sdk_test.mjs  alias_analysis.typ  alias_optimization.typ  alias_report.tex  alpha_lead_analysis.typ  analyze_aapl_dependencies.py  analyze_benchmarks.py  analyze_futures.py  analyze_lcai.py  analyze_nonlinear_scaling.py  analyze_smin_eigen.py  analyze_zkp_profitability.py  apool_client.cpp  apool_client_finish.cpp  apool_client_full.cpp  backtest_1min_4mo.py  backtest_strategy.py  benchmark  benchmark_levy_hw.py  benchmark_table.tex  bls12_377_eigen.cpp  bls12_377_math.v  bls377_verification.v  bls_math_tests.cpp  book.tex  categorize_pdfs.py  check_assets.py  (+234 more)
src/: activation_benchmark.cpp  alias_activation_test.cpp  benchmark.cpp  commodity_trainer.cpp  comprehensive_benchmark.cpp  dia_ffnn_512.cpp  dia_ffnn_64_64.cpp  energy_trainer.cpp  generalization_test.cpp  indices_ffnn_256.cpp  indices_gp.py  indices_mc_64.cpp  intensive_levy_trainer.cpp  jump_benchmark.cpp  levy_kernels.hpp  levy_mu_p.cpp  levy_trainer.cpp  levy_trainer_accelerate.cpp  levy_trainer_neon.cpp  main.cpp  main_ode_norm.cpp  main_pwl.cpp  multistep_train.cpp  nonlinear_scaling.cpp  optimized_benchmark.cpp  optimizer_test.cpp  scaling_test.cpp  signature_martingale.py  smin_trainer.cpp  sphere_alias.cpp  walkforward_trading.cpp  zenith_trainer.cpp
